# rustmatch

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  pyproject.toml
docs/: algorithms.md  api.md  changelog.md  conf.py  examples.md  index.md  installation.md  optimization.md  quickstart.md
examples/: basic_usage.py
python/rustmatch/: __init__.py
src/: lib.rs
tests/: test_benchmark.py  test_matching.py
