[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rustmatch"
version = "0.1.0"
description = "High-performance template matching library powered by Rust with NCC algorithm, integral images, and image pyramids"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
authors = [
    { name = "Junjie Duan", email = "nerve_nerve@163.com" }
]
keywords = [
    "template-matching",
    "image-processing",
    "computer-vision",
    "ncc",
    "rust",
    "high-performance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]
# Zero dependencies! numpy/pillow are completely optional
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pillow>=9.0.0",
    "maturin>=1.4.0"
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.23.0",
    "myst-parser>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/JunjieDuan/rustmatch"
Documentation = "https://rustmatch.readthedocs.io"
Repository = "https://github.com/JunjieDuan/rustmatch"
Changelog = "https://github.com/JunjieDuan/rustmatch/blob/main/CHANGELOG.md"
Issues = "https://github.com/JunjieDuan/rustmatch/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rustmatch._core"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
